# eltechcriollo

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  api.py  docker-compose.yml  render.yaml  requirements.txt
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  api.py  env.example  main.py  migrate_to_poetry.sh  pyproject.toml  pytest.ini  requirements.txt
backend/data/: tech_dictionary.json  tech_history.db-shm  tech_history.db-wal
backend/modules/core/: app.py
backend/modules/models/: config.py  source.py
backend/modules/services/: ai_manager.py  database_manager.py  notification_manager.py  report_manager.py  scraper_manager.py  tech_filter.py
backend/modules/utils/: logger.py
backend/tests/: conftest.py  test_api.py  test_services.py
data/: sources.json  tech_dictionary.json
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js  vitest.config.js
frontend/src/: App.jsx  index.css  main.jsx
modules/core/: app.py
modules/models/: config.py  source.py
modules/services/: ai_manager.py  database_manager.py  department_detector.py  notification_manager.py  report_manager.py  (+4 more)
reports/: test_connection.md
scratch/: explore_sena2.py  explore_sena_fondo.py  find_apis.py  find_apis2.py  inspect_playwright.py  test_detector_logic.py  test_filter.py  test_new_sources.py  test_regional_feeds.py  test_scrapers.py  test_selectors.py  test_sena_fondo.py  test_sena_fondo2.py  test_wired_es.py  validate_sources.py
static/: style.css
templates/: admin.html  index.html  login.html
(+18 files in other folders)
