[tool.poetry]
name = "el-tech-criollo"
version = "1.0.0"
description = "Centro de inteligencia de noticias automatizado"
authors = ["El Tech Criollo"]
readme = "README.md"
packages = [{include = "modules"}]

[tool.poetry.dependencies]
python = "^3.11"
feedparser = "^6.0.11"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
jinja2 = "^3.1.3"
deep-translator = "^1.11.4"
apscheduler = "^3.10.4"
playwright = "^1.42.0"
httpx = "^0.27.0"
duckduckgo-search = "^5.3.0"
sqlalchemy = "^2.0.28"
psycopg2-binary = "^2.9.9"
google-generativeai = "^0.4.1"
python-multipart = "^0.0.9"
itsdangerous = "^2.1.2"
bcrypt = "^4.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
black = "^24.3.0"
flake8 = "^7.0.0"
mypy = "^1.9.0"

[tool.poetry.scripts]
tech-criollo = "api:app"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"